--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.21.2",
     "nanoid": "^5.1.2",
-    "hot-shots": "^10.0.0"
+    "hot-shots": "^10.0.0",
+    "node-statsd": "^0.1.1"
   }
 }
